--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </article>
     </main>
     <footer>
-        <p>Site criado por <a href="https://github.com/gustavoguanabara" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.youtube.com/@CursoemVideo" target="_blank">CursoemVideo</a>.</p>
+        <p>Site criado por <a href="https://github.com/samucarafi" target="_blank">Samuel Rafino da Silva</a> para o <a href="https://www.youtube.com/@CursoemVideo" target="_blank">CursoemVideo</a>.</p>
     </footer>
 </body>
 </html>
